<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutAdult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdultFragment">

    <TextView
        android:id="@+id/textViewAdultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/swimmer_adult"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdultNameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdultNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/swimmer_name_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdultBirthDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextAdultName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAdultName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/swimmer_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAdultNameLabel"
        app:layout_constraintTop_toTopOf="@+id/textViewAdultNameLabel" />

    <TextView
        android:id="@+id/textViewAdultBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/swimmer_birth_date_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdultAddress"
        app:layout_constraintEnd_toStartOf="@+id/editTextAdultBirthDate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAdultBirthDate"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/swimmer_birth_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAdultBirthDate"
        app:layout_constraintTop_toTopOf="@+id/textViewAdultBirthDate" />

    <TextView
        android:id="@+id/textViewAdultAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/swimmer_address_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdultGym"
        app:layout_constraintEnd_toStartOf="@+id/editTextAdultAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAdultAddress"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/swimmer_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAdultAddress"
        app:layout_constraintTop_toTopOf="@+id/textViewAdultAddress" />

    <TextView
        android:id="@+id/textViewAdultGym"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical"
        android:text="@string/swimmer_gym_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdultBestTime"
        app:layout_constraintEnd_toStartOf="@+id/editTextAdultGym"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAdultGym"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/swimmer_gym"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAdultGym"
        app:layout_constraintTop_toTopOf="@+id/textViewAdultGym" />

    <TextView
        android:id="@+id/textViewAdultBestTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical"
        android:text="@string/swimmer_best_time_label"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdultRegister"
        app:layout_constraintEnd_toStartOf="@+id/editTextAdultBestTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAdultBestTime"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/swimmer_best_time"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewAdultBestTime"
        app:layout_constraintTop_toTopOf="@+id/textViewAdultBestTime" />

    <Button
        android:id="@+id/buttonAdultRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/button_register"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>